--- a/src/client/components/app-core/text.css
+++ b/src/client/components/app-core/text.css
@@ -1,3 +1,20 @@
 html {
-  font-family: sans-serif;
+  font-family: 'system', sans-serif;
+}
+
+a {
+  font-weight: bold;
+  font-size: 1rem;
+  color: var(--black);
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+a:hover {
+  color: var(--action-color);
+}
+
+p {
+  font-size: 1rem;
+  margin-bottom: 1rem;
 }
