Changes after review

--- a/src/client/components/app-core/fonts.css
+++ b/src/client/components/app-core/fonts.css
@@ -1,5 +1,6 @@
 @font-face {
   font-family: system;
   font-style: normal;
+  font-weight: normal;
   src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
 }
