--- a/src/client/components/app-core/variables.css
+++ b/src/client/components/app-core/variables.css
@@ -1,7 +1,7 @@
 :root {
   --action-color: #6a9ce4;
   --neutral-color: #f5f5f5;
-  --dark-neutral: #4c4c4c;
-  --white: #fff;
-  --black: #000;
+  --dark-neutral-color: #4c4c4c;
+  --background-color: #fff;
+  --text-color: #000;
 }
