--- a/src/client/components/app-core/text.css
+++ b/src/client/components/app-core/text.css
@@ -1,5 +1,5 @@
-html {
-  font-family: 'system', sans-serif;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 a {
