--- a/src/client/components/app-core/app-core.stories.css
+++ b/src/client/components/app-core/app-core.stories.css
@@ -1,16 +1,14 @@
+@import './index.css';
+
 .story {
-  padding: 2rem;
+  padding: var(--spacing-double);
 }
 
 .title,
 .subtitle {
-  margin-bottom: 2rem;
-  padding-bottom: 1rem;
+  margin-bottom: var(--spacing-double);
+  padding-bottom: var(--spacing-default);
   border-bottom: 1px solid #c5c5c5;
-}
-
-.subtitle {
-  margin-top: 2rem;
 }
 
 .colors {
@@ -20,20 +18,19 @@
 }
 
 .color {
-  margin-right: 1rem;
+  margin-right: var(--spacing-default);
   text-align: center;
 }
 
 .color-box {
-  width:140px;
-  height:140px;
-  box-shadow: 1px 1px 10px #ccc;
+  width: 140px;
+  height: 140px;
+  box-shadow: 1px 1px 10px #c5c5c5;
   border-radius: 10px;
   margin: 0 auto;
-  margin-bottom: .5rem;
+  margin-bottom: var(--spacing-half);
 }
 
-.headings > *,
-.paragraphs > * {
-  margin-bottom: 1rem;
+.headings > * {
+  margin-bottom: var(--spacing-default);
 }
