--- a/src/client/components/app-core/text.css
+++ b/src/client/components/app-core/text.css
@@ -3,7 +3,7 @@ body {
 }
 
 a {
-  font-size: 1rem;
+  font-size: var(--font-size-default);
   color: var(--action-color);
   text-decoration: none;
 }
@@ -14,6 +14,9 @@ a:hover {
 }
 
 p {
-  font-size: 1rem;
-  margin-bottom: 1rem;
+  font-size: var(--font-size-default);
+}
+
+p:not(:last-child) {
+  margin-bottom: var(--spacing-normal);
 }
