--- a/src/client/components/app-core/text.css
+++ b/src/client/components/app-core/text.css
@@ -1,3 +1,22 @@
-html {
-  font-family: sans-serif;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+a {
+  font-size: var(--font-size-default);
+  color: var(--action-color);
+  text-decoration: none;
+}
+
+a:focus,
+a:hover {
+  border-bottom: 1px solid var(--action-color);
+}
+
+p {
+  font-size: var(--font-size-default);
+}
+
+p:not(:last-child) {
+  margin-bottom: var(--spacing-normal);
 }
