--- a/src/client/components/app-core/layout.css
+++ b/src/client/components/app-core/layout.css
@@ -11,7 +11,16 @@ figure {
   margin: 0 auto;
 }
 
+figcaption {
+  margin-top: var(--spacing-half);
+  text-align: center;
+}
+
 img {
   max-width: 100%;
   height: auto;
+}
+
+button:hover {
+  cursor: pointer;
 }
