Add sticky behavior also on stories, clean up code

--- a/src/client/components/table-of-contents/table-of-contents.stories.css
+++ b/src/client/components/table-of-contents/table-of-contents.stories.css
@@ -19,6 +19,8 @@
 
   .main-content__sidebar {
     display: inline-block;
+    position: sticky;
+    top: 10px;
     flex-grow: 1;
     max-width: 300px;
     margin-right: var(--spacing-double);
