--- a/src/client/components/table-of-contents/table-of-contents.stories.css
+++ b/src/client/components/table-of-contents/table-of-contents.stories.css
@@ -1,33 +1,32 @@
 .main-content {
-  display: flex;
-  justify-content: center;
-  max-width: 920px;
+  margin: 0 auto;
   padding: 0 var(--spacing-default);
+  max-width: 920px;
 }
 
 .main-content__sidebar {
-  display: none;
+  margin: 0 auto var(--spacing-double) auto;
+  width: 100%;
+  max-width: var(--max-width);
+}
+
+.main-content__content {
+  max-width: 600px;
 }
 
 @media screen and (min-width: 880px) {
   .main-content {
+    display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 0 auto;
-    padding: 0 var(--spacing-default);
+    padding: 0 var(--spacing-double);
   }
 
   .main-content__sidebar {
-    display: inline-block;
     position: sticky;
-    top: 10px;
+    top: 80px;
     flex-grow: 1;
+    margin: 0 var(--spacing-double) 0 0;
     max-width: 300px;
-    margin-right: var(--spacing-double);
-    margin-bottom: 0;
-  }
-
-  .main-content__content {
-    max-width: 600px;
   }
 }
