--- a/src/client/components/app-core/app-core.stories.css
+++ b/src/client/components/app-core/app-core.stories.css
@@ -31,7 +31,7 @@
   margin-bottom: var(--spacing-default);
 }
 
-.buttons-demo button {
+.button {
   display: block;
   margin: 1.5rem 0 2rem 0;
 }
