--- a/src/client/components/app-core/index.css
+++ b/src/client/components/app-core/index.css
@@ -1,6 +1,7 @@
 @import './a11y.css';
 @import './fonts.css';
 @import './layout.css';
+@import './links.css';
 @import './lists.css';
 @import './text.css';
 @import './variables.css';
