--- a/src/client/components/app-core/variables.css
+++ b/src/client/components/app-core/variables.css
@@ -10,6 +10,10 @@
   --background-color: #fff;
   --text-color: #4c4c4c;
 
+/* suffixes */
+  --suffix-opacity: .5;
+  --suffix-size: .625em;
+
 /* shadows */
   --shadow-small-grey: 0 1px 5px #ccc;
   --shadow-wide-grey: 0 2px 10px #ccc;
