Feat/handle outbound links (#55)
* Add rel=noopener to links with target blank on dato config

* Make external links distinguishable

* feat(dato.config): add target, class to outbound links

* refactor(app-core): links separate from text

* fix(app-footer): use smart-link instead of nuxt-link

* feat(smart-link): add target, class, rel for outbound links

* feat(links): tweak styling

* refactor: use data-attribute for outbound links

* feat(links): tweak styling

* feat(default): track outbound links

* docs(default): explain if statement

* feat(app-core): include demo for links

* feat(links): css-only outbound link style

* fix(dato.config): DRY

* feat(links): wrap in @supports to guard against IE

* refactor(default): track-outbound-links in separate component

--- a/src/client/components/app-core/text.css
+++ b/src/client/components/app-core/text.css
@@ -1,17 +1,7 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: le-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: var(--font-size-default);
   color: var(--text-color);
-}
-
-a {
-  color: var(--action-color);
-  text-decoration: none;
-}
-
-a:focus,
-a:hover {
-  border-bottom: 1px solid var(--action-color);
 }
 
 p:not(:last-child) {
