Feat/action button (#67)
* style(buttons.css): used padding instead of fixed height

* feat(smart-links): added <smart-links />

* storybook(smart-links): added variation with one link

* fix(app-header): add specificity to button mobile to fix visibility

* style(buttons.css): matched styling to the previous button style

* refactor: renamed to <button-group />, used BEM in app-header for button

* storybook(button-group): updated component name

* style(buttons.css): added comment for letter spacing

* refactor: pull request changes

--- a/src/client/components/app-core/buttons.css
+++ b/src/client/components/app-core/buttons.css
@@ -1,12 +1,15 @@
 @import './variables.css';
 
 .button {
-  padding: 0 var(--spacing-default);
+  display: inline-block;
+  padding-top: var(--spacing-half);
+  padding-bottom: var(--spacing-half);
+  padding-left: var(--spacing-default);
+  padding-right: var(--spacing-default);
   font-size: var(--font-size-default);
   color: var(--action-color);
   text-transform: uppercase;
-  line-height: 40px;
-  height: 40px;
+  letter-spacing: 1px; /* use letter spacing when capitals are used for readability */
   background-color: var(--background-color);
   box-shadow: var(--shadow-small-grey);
   border: none;
