added <email-form />, storybook story, changed dato config

--- a/src/client/components/app-core/buttons.css
+++ b/src/client/components/app-core/buttons.css
@@ -12,13 +12,14 @@
   letter-spacing: 1px; /* use letter spacing when capitals are used for readability */
   background-color: var(--background-color);
   box-shadow: var(--shadow-small-grey);
-  border: none;
+  border: 1px solid transparent;
   border-radius: 3px;
 }
 
 .button--primary {
   color: var(--background-color);
   background-color: var(--action-color);
+  border: 1px solid var(--action-color);
 }
 
 .button--pending::before {
@@ -38,10 +39,9 @@
 
 .button:hover,
 .button:focus {
+  background-color: #95b3e8;
   cursor: pointer;
-  opacity: .6;
   text-decoration: none;
-  border: none;
 }
 
 @keyframes button__spinner {
