--- a/src/client/components/app-core/index.css
+++ b/src/client/components/app-core/index.css
@@ -2,6 +2,7 @@
 @import './fonts.css';
 @import './layout.css';
 @import './links.css';
+@import './form.css';
 @import './lists.css';
 @import './text.css';
 @import './variables.css';
