--- a/src/client/components/app-core/index.css
+++ b/src/client/components/app-core/index.css
@@ -5,5 +5,6 @@
 @import './form.css';
 @import './lists.css';
 @import './text.css';
+@import './alert.css';
 @import './variables.css';
 @import './buttons.css';
