--- a/src/client/components/app-core/variables.css
+++ b/src/client/components/app-core/variables.css
@@ -11,6 +11,7 @@
   --text-color: #4c4c4c;
   --text-light-color: #adadad;
   --focus-color: #42BF9A;
+  --success-color: #54a879;
 
 /* suffixes */
   --suffix-opacity: .5;
