processed pull request feedback

--- a/src/client/components/app-core/form.css
+++ b/src/client/components/app-core/form.css
@@ -1,14 +1,7 @@
-label {
-  cursor: pointer;
-}
-
 [type="text"],
 [type="email"],
 [type="password"] {
-  padding-top: var(--spacing-half);
-  padding-bottom: var(--spacing-half);
-  padding-left: var(--spacing-default);
-  padding-right: var(--spacing-default);
+  padding: var(--spacing-half) var(--spacing-default);;
   border-radius: var(--border-radius-small);
   border: 1px solid var(--text-color);
 }
