--- a/src/client/components/app-core/form.css
+++ b/src/client/components/app-core/form.css
@@ -9,7 +9,7 @@
 [type="text"]:focus,
 [type="email"]:focus,
 [type="password"]:focus {
-  border-color: var(--action-color);
+  border-color: var(--focus-color);
   outline: none;
 }
 
