--- a/src/client/components/app-core/index.css
+++ b/src/client/components/app-core/index.css
@@ -1,8 +1,10 @@
 @import './a11y.css';
+@import './alert.css';
+@import './buttons.css';
 @import './fonts.css';
+@import './form.css';
 @import './layout.css';
 @import './links.css';
 @import './lists.css';
 @import './text.css';
 @import './variables.css';
-@import './buttons.css';
