--- a/src/client/components/app-core/variables.css
+++ b/src/client/components/app-core/variables.css
@@ -10,6 +10,8 @@
   --background-color: #fff;
   --text-color: #4c4c4c;
   --text-light-color: #adadad;
+  --focus-color: #42bf9a;
+  --success-color: #54a879;
 
 /* suffixes */
   --suffix-opacity: .5;
