refactor: use classes instead of attribute styling for forms

--- a/src/client/components/app-core/form.css
+++ b/src/client/components/app-core/form.css
@@ -1,16 +1,10 @@
-[type="text"],
-[type="email"],
-[type="password"],
-textarea {
+.form-control {
   padding: var(--spacing-half) var(--spacing-default);;
   border-radius: var(--border-radius-small);
   border: 1px solid var(--text-color);
 }
 
-[type="text"]:focus,
-[type="email"]:focus,
-[type="password"]:focus,
-textarea:focus {
+.form-control:focus {
   border-color: var(--focus-color);
   outline: none;
 }
