--- a/src/client/components/app-core/form.css
+++ b/src/client/components/app-core/form.css
@@ -1,3 +1,12 @@
+.form-label {
+  display: block;
+  margin-bottom: var(--spacing-half);
+}
+
+.form-field {
+  margin-bottom: var(--spacing-double);
+}
+
 .form-control {
   padding: var(--spacing-half) var(--spacing-default);;
   border-radius: var(--border-radius-small);
