style: added focus styles

--- a/src/client/components/app-core/buttons.css
+++ b/src/client/components/app-core/buttons.css
@@ -19,6 +19,7 @@
 .button:hover,
 .button:focus {
   background-color: var(--focus-color);
+  color: var(--background-color);
   cursor: pointer;
   text-decoration: none;
 }
