refactor: pr feedback, tweaked styling

--- a/src/client/components/app-core/buttons.css
+++ b/src/client/components/app-core/buttons.css
@@ -18,8 +18,7 @@
 
 .button:hover,
 .button:focus {
-  background-color: var(--focus-color);
-  color: var(--background-color);
+  color: var(--focus-color);
   cursor: pointer;
   text-decoration: none;
 }
