--- a/src/client/components/app-core/buttons.css
+++ b/src/client/components/app-core/buttons.css
@@ -18,7 +18,7 @@
 
 .button:hover,
 .button:focus {
-  background-color: var(--focus-color);
+  color: var(--focus-color);
   cursor: pointer;
   text-decoration: none;
 }
@@ -31,7 +31,9 @@
 
 .button--primary:hover,
 .button--primary:focus {
+  background-color: var(--focus-color);
   border-color: var(--focus-color);
+  color: var(--background-color);
 }
 
 .button--pending::before {
