--- a/src/client/components/app-core/variables.css
+++ b/src/client/components/app-core/variables.css
@@ -5,7 +5,7 @@
   --max-width: 600px;
 
 /* colors */
-  --action-color: #6a9ce4;
+  --action-color: #EFA7A7;
   --neutral-color: #f5f5f5;
   --background-color: #fff;
   --text-color: #4c4c4c;
