Fix/focus chat optin (#89)
* refactor(opt-in): focus on opt-in when hitting the chat button and not opted-in yet

* refactor(crisp.css): focus on chat when hitting the chat button and already opted-in

* refactor(lazy-chat): keep the button in the dom when hidden

* refactor(lazy-chat): focus on chat button when declining inside opt-in

* feat(lazy-chat): focus chat button after chat window is closed

* Move focus on Crisp button to crisp.js

* Remove unused data prop in lazy-chat

--- a/src/client/components/lazy-chat/providers/crisp.css
+++ b/src/client/components/lazy-chat/providers/crisp.css
@@ -70,3 +70,7 @@
 #crisp-chatbox > div > a > span:last-child {
   background-color: var(--action-color) !important;
 }
+
+#crisp-chatbox > div > a:focus span:last-child {
+ background-color: var(--focus-color) !important;
+}
