refactor: global styling tweaks

--- a/src/client/components/app-core/text.css
+++ b/src/client/components/app-core/text.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: le-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: var(--font-size-default);
+  font-size: 112.5%; /* 18px */
   color: var(--text-color);
   line-height: 1.5;
 }
