--- a/src/client/components/app-core/text.css
+++ b/src/client/components/app-core/text.css
@@ -1,10 +1,10 @@
 @import './variables.css';
 
-body {
+html {
   font-family: le-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 112.5%; /* 18px */
   color: var(--text-color);
   line-height: 1.5;
+  font-size: 112.5%; /* 18px */
 }
 
 p {
