feat: add postcss

--- a/src/client/includes/layouts/default.html
+++ b/src/client/includes/layouts/default.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Accept-CH" content="DPR, Width, Viewport-Width, Save-Data">
-    <link rel="icon" type="image/png" href="/favicon.pns">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="stylesheet" href="/index.css">
     <link rel="dns-prefetch" href="https://www.datocms-assets.com/">
     {% block meta %}
       <meta name="description" content"">
