refactor: add nunjucks filetype prefix

--- a/src/client/includes/layouts/default.njk.html
+++ b/src/client/includes/layouts/default.njk.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>{% block title %}Lean Web Kit{% endblock %}</title>
+    <title>{{ title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Accept-CH" content="DPR, Width, Viewport-Width, Save-Data">
@@ -12,15 +12,14 @@
     {% endblock %}
   </head>
   <body>
-    {% include "../components/skip-links/skip-links.html" %}
-    {# {% include "../components/app-header/app-header.html" %} #}
+    {% include "../components/skip-links/skip-links.njk.html" %}
+    {% include "../components/app-header/app-header.njk.html" %}
     <main id="maincontent">
     {% block main %}
       <div>
       </div>
     {% endblock %}
     </main>
-    {% include "../components/app-footer/app-footer.html" %}
-    {# {% include "../components/lazy-chat/lazy-chat.html" %} #}
+    {% include "../components/app-footer/app-footer.njk.html" %}
   </body>
 </html>
