style(text.css): reset font size

--- a/src/client/components/app-core/text.css
+++ b/src/client/components/app-core/text.css
@@ -4,7 +4,7 @@ html {
   font-family: le-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: var(--text-color);
   line-height: 1.5;
-  font-size: 112.5%; /* 18px */
+  font-size: 1rem;
 }
 
 p {
